# Sensor_aceleracao_Lora

./: CMakeLists.txt  README.md  lora_rx_01.c
